# template_source_code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/: interpolation.h  perlin_noise.h  template_generating.h  template_generating_crack.h  template_generating_dent.h  template_generating_paint.h  template_types.h  template_utils.h  template_visualizing.h
source/: interpolation.cpp  main.cpp  perlin_noise.cpp  template_generating.cpp  template_generating_crack.cpp  template_generating_dent.cpp  template_generating_paint.cpp  template_utils.cpp  template_visualizing.cpp
